@@ -1,0 +1,27 @@
+<?xml version="1.0"?>
+<!-- The COPYRIGHT file at the top level of this repository contains the full
+copyright notices and license terms. -->
+<tryton>
+    <data>
+
+        <record model="ir.ui.view" id="default_bank_account_view_tree">
+            <field name="model">party.party.default.bank_account</field>
+            <field name="inherit"
+                ref="company_bank.default_bank_account_view_tree"/>
+            <field name="name">default_bank_account_tree</field>
+        </record>
+        <record model="ir.ui.view"
+            id="default_bank_account_view_tree_sequence">
+            <field name="model">party.party.default.bank_account</field>
+            <field name="inherit"
+                ref="company_bank.default_bank_account_view_tree_sequence"/>
+            <field name="name">default_bank_account_tree</field>
+        </record>
+        <record model="ir.ui.view" id="default_bank_account_view_form">
+            <field name="model">party.party.default.bank_account</field>
+            <field name="inherit"
+                ref="company_bank.default_bank_account_view_form"/>
+            <field name="name">default_bank_account_form</field>
+        </record>
+    </data>
+</tryton>
