@@ -9,3 +9,4 @@ depends:
 xml:
     account.xml
     payment.xml
+    party.xml
